<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Name-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/txt_name"
            android:gravity="right"
            android:padding="5dp"
            />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_name"
            android:clickable="false"
            android:focusable="false"
            android:background="@drawable/edit_text_background"
            android:padding="5dp"
            />

    </LinearLayout>

    <!--Phone-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/text_view_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/txt_phone"
            android:gravity="right"
            android:padding="5dp"
            />

        <EditText
            android:id="@+id/edit_text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_phone"
            android:clickable="false"
            android:focusable="false"
            android:background="@drawable/edit_text_background"
            android:padding="5dp"
            />

    </LinearLayout>

    <!--E-Mail-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/text_view_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/txt_email"
            android:layout_weight="4"
            android:padding="5dp"
            />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_email"
            android:clickable="false"
            android:focusable="false"
            android:background="@drawable/edit_text_background"
            android:padding="5dp"
            />

    </LinearLayout>

    <!--Street-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/text_view_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/txt_street"
            android:layout_weight="4"
            android:padding="5dp"

            />

        <EditText
            android:id="@+id/edit_text_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_street"
            android:clickable="false"
            android:focusable="false"
            android:background="@drawable/edit_text_background"
            android:padding="5dp"
            />

    </LinearLayout>

    <!--City-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/text_view_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/txt_city"
            android:layout_weight="4"
            android:padding="5dp"
            />

        <EditText
            android:id="@+id/edit_text_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_city"
            android:clickable="false"
            android:focusable="false"
            android:background="@drawable/edit_text_background"
            android:padding="5dp"
            />

    </LinearLayout>

    <!--State-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/text_view_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/txt_state"
            android:layout_weight="4"
            android:padding="5dp"
            />

        <EditText
            android:id="@+id/edit_text_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_state"
            android:clickable="false"
            android:focusable="false"
            android:background="@drawable/edit_text_background"
            android:padding="5dp"
            />

    </LinearLayout>

    <!--Zip-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/text_view_zip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/txt_zip"
            android:layout_weight="4"
            android:padding="5dp"
            />

        <EditText
            android:id="@+id/edit_text_zip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_zip"
            android:clickable="false"
            android:focusable="false"
            android:background="@drawable/edit_text_background"
            android:padding="5dp"
            />

    </LinearLayout>

</LinearLayout>